--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.application.name=configurationservice
 server.port=8888
 logging.level.root=debug
-spring.cloud.config.server.git.uri=file:///c:/Users/julio/Documents/workspace-spring-tool-suite/config-source-repo-demo
+spring.cloud.config.server.git.uri=file:///tmp/config-source-repo-demo
 # spring.cloud.config.server.git.uri=https://github.com/juliocesarscheidt/config-source-repo-demo.git
 # spring.cloud.config.server.git.username=
 # spring.cloud.config.server.git.password=
